# resume-builder

./: .env  .gitignore  README.md  app.py  debug_path.py  doc_converter_test.py  main.py  packages.txt  pyproject.toml  test_doc.py
data/jd/: content_creator.txt
output/: initial_resume.json  resume.docx  resume.html  resume.json
resume_builder/: __init__.py
resume_builder/agent/: __init__.py  ats_agent.py  react_agent.py
resume_builder/formatters/: __init__.py  docx_converter.py  html_formatter.py  pdf_converter.py  template_manager.py
resume_builder/models/: __init__.py  job.py  resume.py
resume_builder/tools/: __init__.py  ats_optimizer.py  job_analyzer.py  keyword_processor.py  resume_generator.py  resume_parser.py
templates/: harvard.html  minimal.html  modern.html
